css/styles.css
body, .navbar-light {
	color: #343434 !important;
}

.post-header img {
	margin-top: 30px;
	margin-bottom: 40px;
}

#main-container
{
	padding-top: 200px;
	padding-left: 60px;
}

#primary-column {

	padding-right: 40px;
	padding-top: 60px;
	background-image: linear-gradient(#171717 10%, rgba(255,255,255,0) 0%);
	background-position: right;
	background-size: 1px 8px;
	background-repeat: repeat-y;
}

/* SIDEBAR */

#sidebar {
	padding-top: 0px;
	padding-left: 0px; 
	padding-right: 0px;
	/* max-width: 350px;*/

}


#sidebar .about
{
	position: relative;
	top: -60px; 
	background-image: url("../img/about-footer@2x.jpg"), url("../img/about-header@2x.jpg"), url("../img/about-fill@2x.jpg") ;
	background-size: 100% auto, 100% auto, 100% auto;
	background-repeat: no-repeat, no-repeat, repeat-y;
	background-position: bottom, top, bottom;
	padding-top: 105% !important;
	padding-left: 22%;
	padding-right: 22%;
	padding-bottom: 80px;
}

#sidebar .about p, #sidebar .subscribe p
{
	font-family: "open-sans","Open Sans";
	font-size: .9rem !important;
	text-align: center;
}


#sidebar .subscribe
{
	position: relative;
	top: -100px;
	z-index: -1;
	color: #FFF;
	height: 500px;
	background-image: url("../img/subscribe-footer@2x.jpg"), url("../img/subscribe-header@2x.jpg"), url("../img/subscribe-fill@2x.jpg") ;
	background-size: 100% auto, 100% auto, 100% auto;
	background-repeat: no-repeat, no-repeat, repeat-y;
	background-position: bottom, top, bottom;
	padding-left: 22%;
	padding-right: 22%;
	padding-bottom: 600px;
}

#sidebar .subscribe h2
{
	padding-top: 60%;
	text-align: center;
	font-family: "atrament-web","atrament";
}


/* TYPOGRAPHY */


h1 {
  font-family: "atrament-web","atrament";
  font-size: 3rem;
  margin-bottom: 0;
}

p {
	font-family: "open-sans","Open Sans";
	font-size: 1.125rem;
}



.date
{
	font-family: "open-sans";
	font-size: 0.8125rem;
}

blockquote {
	border: none !important;
}
blockquote p {
	font-family: "atrament-web","atrament";
 	font-size: 2.125rem;
 	font-style: italic;
 	font-weight: 800;

}

/* BUTTONS */


.btn-primary{
	background-color: #D20298;
	border-radius: 0;
	border: none;
	font-family: "atrament-web","atrament";
}

/* FORM ELEMENTS */

input {
	margin-bottom: 15px;
	height: 44px;
}


/* NAVIGATION */

nav {
	font-family: "atrament-web","atrament";
 	font-size: 0.9375rem;
 	background: white;
 	text-transform: uppercase;
 	letter-spacing: 2px; 

}

.navbar
{
	padding-top: 40px;
	padding-bottom: 30px;
	padding-left: 40px;
	padding-right: 0px;
}

.navbar-brand.scrolled
{
	/*transform: scale(0.01);
	transition: transform 100ms linear; */
}

nav .nav-item
{
	margin-right: 40px;
	padding-left: 10px;
	padding-right: 10px;

}

nav .navbar-toggler
{
	border: none;
	right: 40px;
}

nav .navbar-toggler:focus
{
	outline: none;
/* 	-ms-transform: rotate(90deg);  
    -webkit-transform: rotate(90deg); 
    transform: rotate(90deg);*/
}


.navbar .navbar-nav
{
	padding-bottom: 30px;
}

.navbar .nav-link.active
{
	border-bottom: 2px solid #D20298;
}

.navbar-fixed-top{
	border-bottom: none;
}

.navbar-fixed-top.scrolled {
  background-color: rgba(250, 250, 250, 0.97) !important;
  border-bottom: #E7E7E7 solid 1px;
  transition: background-color 200ms linear;
  transition: box-shadow 200ms;
	-webkit-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
	-moz-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
	box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);

}


/* FOOTER */

#footer {
	margin-top: 200px;
	background: #333333 url("../img/footer@2x.jpg") bottom left no-repeat;
	background-size: 1024px 132px;
	width: 100%;
	height:132px;

}

.shadow {
	-moz-box-shadow: 0px 2px 32px 11px #e0e0e0; 
	-webkit-box-shadow: 0px 2px 32px 11px #e0e0e0; 
	box-shadow: 0px 2px 32px 11px #e0e0e0; 
	/* Alas, box-shadow is not fully supported by IE < 9 */
}

